fitness_center_app_test_fix_07.10.2024